<resources>
    <string name="app_name">Preloved App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="content_login">Welcome to PreLoved App, Please Login Before Use Application.</string>
    <string name="no_have_account">Didn`t Have Account? <b><font color='#EE839F'>Register</font></b></string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="sell">Sell</string>
    <string name="sale">Sale</string>
    <string name="account">Account</string>
    <string name="search_hint">Search your preloved.....</string>
    <string name="category">Category</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="contentbackbutton">backbutton</string>
    <string name="tv_register">Register</string>
    <string name="tv_register_detail">Please register your identity before use Preloved.</string>
    <string name="your_valid_email">Your Valid Email</string>
    <string name="your_unique_password">Your Unique Password</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="register">Register</string>
    <string name="sudah_memiliki_akun_login">Already Have Account?  <b><font color='#EE839F'>Login</font></b></string>
    <string name="akun">Account</string>
    <string name="ubah_profile">Change Profile</string>
    <string name="keluar">Logout</string>
    <string name="version_app">Version 1.0.0</string>
    <string name="enter_your_city">Enter Your City</string>
    <string name="add">Add</string>
    <string name="ubah">Change</string>
    <string name="data_produk">Product Data</string>
    <string name="nama_produk">Product Name</string>
    <string name="harga_produk">Product Price</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="kategori">Category</string>
    <string name="deskripsi_produk">Description Product</string>
    <string name="foto_produk">Foto Produk*</string>
    <string name="preview">Preview</string>
    <string name="jual">Sell</string>
    <string name="choose_category">Choose Your Category</string>
    <string name="please_login">Please Login First, Before Use This Feature</string>
    <string name="warning">Warning</string>
    <string name="later">Later</string>
    <string name="no_notification">There Are No Notification</string>
    <string name="date">18 Jul, 10:42</string>
    <string name="dummy_title_product">Jam Tangan Casio</string>
    <string name="rp_400_000">Rp.400.000</string>
    <string name="berhasil_di_rp_200_000">Berhasil di Rp 200.000</string>
    <string name="notif_message">Pesan Notif</string>
    <string name="product_offer">Product Offer</string>
    <string name="change_password">Change Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="re_enter_new_password">Re-Enter New Password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="list_product">List Product</string>
    <string name="products">Products</string>
    <string name="interested">Interested</string>
    <string name="selled">Selled</string>
    <string name="no_products">No Product Show, Add First</string>
    <string name="seller_name">Seller Name</string>
    <string name="city">City</string>
    <string name="add_n_product">Add \n Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_selled">Product Selled</string>
    <string name="ditawar_rp_200_000">Offered Rp.200.000</string>
    <string name="change_profile">Change Profile</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="OK">OK</string>
    <string name="success_edit_password">Successfully Edit Your Password</string>
    <string name="message_cant_edit_product">You\'re Cannot Edit Selled Product or Offered Product</string>
    <string name="message_complate_account">Please Complate Your Indentity First Before Sell Product</string>
    <string name="message_want_delete_product">Are You Sure Want Delete This Product?</string>
    <string name="sure">Sure</string>
    <string name="message_product_success">Product Successfully Add.</string>
    <string name="message_edit_product">Successfully Edit Product</string>
    <string name="message_delete_product">Successfully Delete Product</string>
    <string name="message_exit">Are You Sure Want Logout?</string>
    <string name="add_0">Add \n Product (0/5)</string>
    <string name="add_1">Add \n Product (1/5)</string>
    <string name="add_2">Add \n Product (2/5)</string>
    <string name="add_3">Add \n Product (3/5)</string>
    <string name="add_4">Add \n Product (4/5)</string>
    <string name="add_5">Add \n Product (5/5)</string>
    <string name="sorry">Sorry</string>
    <string name="remove_first">Remove Your Product First Before Add Other Product</string>
    <string name="enter_name_product">Please enter name of product</string>
    <string name="enter_price_product">Please enter price of product</string>
    <string name="enter_desc_product">Please enter description of product</string>
    <string name="task_cancelled">Task Cancelled</string>
    <string name="max_upload">Max Upload 5 Product</string>
    <string name="toast_product_add">Successfully Add Your Product.</string>
    <string name="please_choose_category">Please Choose Category</string>
    <string name="inser_image_first">Insert Image First</string>
    <string name="post_the_product">Post The Product?</string>
    <string name="congratulations">Congratulations, You Had Got Best Price</string>
    <string name="immediately">Immediately contact the buyer via whatsapp for further transactions</string>
    <string name="your_session">Your Session Login Expired / Not Login , Please Login First</string>
    <string name="no_product_selled">No Product Selled, Be Patient !</string>
    <string name="no_product_interested">No Product Interested, Be Patient!</string>
    <string name="congratulation_sell">Congratulation, U Have Sell Your Product</string>
    <string name="offer_decline">Offer Decline</string>
    <string name="choose_status">Choose Status First</string>
    <string name="accept_offer">Accept the Offer?</string>
    <string name="accept">Accept</string>
    <string name="decline_the_offer">Decline the Offer?</string>
    <string name="history">History</string>
    <string name="my_order">My Order</string>
    <string name="your_bid">Your Bid Had Accepted By Buyer</string>
    <string name="Unfortunately">Unfortunately, Your Bid Declined By Buyer, But U Can Re-bid Again, Edit Your Bid</string>
    <string name="enter_your_bid">Enter Your Bid Price</string>
    <string name="your_bid_forwaded">Your bid will be forwarded to the Seller. If the Seller agrees to your offer, the Seller will contact you.</string>
    <string name="your_bid_text">Your Bid</string>
    <string name="wishlist_product">Wishlist Product</string>

</resources>