...
            app:layout_constraintEnd_toEndOf="@+id/tv_akun"
            app:layout_constraintStart_toStartOf="@+id/tv_akun"
            app:layout_constraintTop_toBottomOf="@id/tv_akun"
            android:contentDescription="@string/contentbackbutton" />

        <TextView
            android:id="@+id/tv_change_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ubah_profile"
            app:layout_constraintTop_toBottomOf="@id/iv_profile"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="@dimen/content"
...
            app:layout_constraintTop_toBottomOf="@id/tv_change_profile"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keluar"
            app:layout_constraintTop_toBottomOf="@id/line1"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="@dimen/content"
...
